--- a/css/styles.css
+++ b/css/styles.css
@@ -593,6 +593,7 @@ button.primary.loading .btn-spinner {
         white-space: normal;
         display: -webkit-box;
         -webkit-line-clamp: 2;
+        line-clamp: 2;
         -webkit-box-orient: vertical;
         overflow: hidden;
     }
